<resources>
    <string name="app_name">Foodico</string>
    <string name="email_string">Email</string>
    <string name="password_string">Password</string>
    <string name="login_string">Login</string>
    <string name="signup_string">Sign up</string>
    <string name="name_string">Name</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Foodico</string>
    <string name="nav_header_subtitle">foodico@android.com</string>
    <string name="nav_header_desc">NaWvigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_menu">Menu</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_log_out">Log out</string>
    <string name="your_cart_is_empty">Your cart is empty.</string>
    <string name="place_order">Place order</string>
    <string name="your_have_no_past_orders">Your have no past orders.</string>

</resources>
