<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic__menu_restaurant_menu_black_24dp"
            android:title="@string/menu_menu" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_menu_shopping_cart_black_24dp"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_menu_orders_black_24dp"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_menu_log_out_black_24dp"
            android:title="@string/menu_log_out" />
    </group>

</menu>
